Update MotoFan.Ru birthdays test resources

--- a/src/test/resources/motofan/motofan.html
+++ b/src/test/resources/motofan/motofan.html
@@ -840,7 +840,7 @@ Google Bot</div>
 			<td class="row2"><b>40</b> пользователей празднуют сегодн€ свой день рождени€<br /><a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=10079'>Grisly</a>(<b>48</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=131544'>Demol1tion</a>(<b>29</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=173781'>J()KER</a>(<b>28</b>) Х
-<a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=21231'>Mad Devil</a>(<b>36</b>) Х
+<a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=124769'>ЈЈХ Demon ХЈЈ</a>(<b>32</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=39865'>SuperMegaFast</a>(<b>29</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=140128'>RIP</a>(<b>32</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=53409'>Amics</a>(<b>32</b>) Х
