Update MotoFan.Ru birthdays test resources: check HTML

--- a/src/test/resources/motofan/motofan.html
+++ b/src/test/resources/motofan/motofan.html
@@ -838,7 +838,7 @@ Google Bot</div>
 		<tr>
 			<td class="row1" width="1%"><img src='style_images/madmoto/calen.gif' border='0' title=' алендарь' alt=' алендарь' /></td>
 			<td class="row2"><b>40</b> пользователей празднуют сегодн€ свой день рождени€<br /><a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=10079'>Grisly</a>(<b>48</b>) Х
-<a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=131544'>Demol1tion</a>(<b>29</b>) Х
+<a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=26699'>&lt;off&gt;</a>(<b>33</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=173781'>J()KER</a>(<b>28</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=124769'>ЈЈХ Demon ХЈЈ</a>(<b>32</b>) Х
 <a href='https://forum.motofan.ru/index.php?s=348216334ec2a8505f73eebf418355b6&amp;showuser=39865'>SuperMegaFast</a>(<b>29</b>) Х
